compiler/acton/test/typeerrors/actor_self_reserved_except_as.act
actor Test():
    try:
        raise ValueError("test")
    except ValueError as self:
        print(self)